--- a/books/backendengineer/config.yaml
+++ b/books/backendengineer/config.yaml
@@ -4,6 +4,5 @@ topics: ["Ruby on Rails", "Ruby", "Docker"] # トピック（5つまで）
 published: false # falseだと下書き
 price: 0 # 有料の場合200〜5000
 chapters:
-  - example1 # チャプター1
-  - example2 # チャプター2
-  - example3 # チャプター3
+  - git
+  - terminal
